# cardioFlow

./: .gitignore  README.md  cardio_onefile.py  pyproject.toml
docs/: api_reference.md  assumptions.md  cli_reference.md  development.md  index.md  model_overview.md  naming_convention.md  outputs.md  pdf_traceability.md  project_scope.md  setup.md  troubleshooting.md  variable_glossary.csv
report/: appendix_traceability.md  final_report.md
tests/: test_atrial_arrhythmia_overlay.py  test_onefile_outputs.py  test_onefile_parity.py  test_onefile_reproducibility.py  test_onefile_smoke.py  test_onepage_figure.py  test_pf_baseline_stability.py  test_pq_signals.py  test_switches.py  test_units.py
tools/: check_naming.py
